fix: css z-index overlay

--- a/src/components/container/container.module.scss
+++ b/src/components/container/container.module.scss
@@ -13,7 +13,7 @@ $transition: width 0.5s ease;
 }
 .instructionsOverlay {
     position: absolute;
-    z-index: 999;
+    z-index: 9;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
